# ChangeLog for dev-python/pygraphviz
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pygraphviz/ChangeLog,v 1.8 2010/11/10 18:12:58 grobian Exp $

  10 Nov 2010; Fabian Groffen <grobian@gentoo.org> pygraphviz-1.0-r1.ebuild:
  Marked ~x86-linux, ~ppc-macos, bug #342001

*pygraphviz-1.0-r1 (29 Oct 2010)

  29 Oct 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -pygraphviz-1.0.ebuild, +pygraphviz-1.0-r1.ebuild,
  +files/pygraphviz-1.0-avoid_tests.patch:
  Don't require tests at run time (bug #341505).

*pygraphviz-1.0 (15 Sep 2010)

  15 Sep 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -pygraphviz-0.99.1.ebuild, -files/pygraphviz-0.99.1-setup.py.patch,
  +pygraphviz-1.0.ebuild, +files/pygraphviz-1.0-setup.py.patch:
  Version bump.

  30 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  pygraphviz-0.99.1.ebuild:
  Set SUPPORT_PYTHON_ABIS.

  01 Jun 2010; Joseph Jezak <josejx@gentoo.org> pygraphviz-0.99.1.ebuild:
  Marked ~ppc for bug #317225.

  08 Feb 2010; Peter Volkov <pva@gentoo.org> pygraphviz-0.99.1.ebuild:
  Add inherit eutils for epatch.

*pygraphviz-0.99.1 (27 Feb 2009)

  27 Feb 2009; Sébastien Fabbro <bicatali@gentoo.org>
  +files/pygraphviz-0.99.1-setup.py.patch, +metadata.xml,
  +pygraphviz-0.99.1.ebuild:
  Initial import, closing bug #253415, thanks Robert Morris
