@@ -1,6 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX pygraphviz-1.0-avoid_tests.patch 1237 RMD160 c1e75aeabc9f5845235c2c5393fe270db1f02348 SHA1 1c5020f08a2487cc5c5412d58e1f153e132eb405 SHA256 e51b10fd6a38bd191e60631f2fa547f61d502e247ece6d5d5dfa3ca61a2c1642
 AUX pygraphviz-1.0-setup.py.patch 1215 RMD160 c356d6acda1130e21b5048e984de59bcf68de904 SHA1 bf46119d7537555d2acf8ae66bd8e08a1c6b2c8d SHA256 d9b33fb2c9e7a29664f735d050a2f3a4ace7322a0260b6b4a14dc859fb259d25
 DIST pygraphviz-1.0.tar.gz 87236 RMD160 c2651201f841a5a04c3b0ff13d437576d44dc28a SHA1 093d16ce9c9f2591788fe990631f866ee207c6bd SHA256 f5c9b81993bbbcb3f6c5d172c035cde65298dccc7c377f34b0f524efaa12ba80
-EBUILD pygraphviz-1.0-r1.ebuild 1305 RMD160 458f242df0e2019b318c9abf5e83985528e6c85a SHA1 af49a276cd050a669394a1eba733990de588f8d6 SHA256 61abab120c62456fc03874ab620c0a7d8a5ee113649caf3e9af84d33a6a10ed4
-MISC ChangeLog 1424 RMD160 028d3fb54c07d0ab1b01d8b6ec8e270cc15f37b7 SHA1 6ec5477dbb940c5817679e305c89833d62557a60 SHA256 67d08e93b31af1c75a1a16a5d37a453fb9a9ba4ff4b5877c24a29b3910e6e6f9
+EBUILD pygraphviz-1.0-r1.ebuild 1327 RMD160 9928392be6199bc01f14069452c18a83c4b26bcb SHA1 88871cdbd1ba59eebfff6506f264dc3f70df9584 SHA256 e6cefb32b63b0313b07aa6d36a3fe918bac2b6e914a9dade2c6d4a46b7709a27
+MISC ChangeLog 1535 RMD160 d8aba7402ccf28a1a062eed7c056965f296f623a SHA1 9473d9a7fe9736f1cb5a5ec10404768cf248979c SHA256 2079ff1954d1047ca330b6dcff49e7bc245d1d8ad2013d0c1ab61c75f48e37f1
 MISC metadata.xml 450 RMD160 0b1ad4d0244f4488b611020cb62da7e53950cc0f SHA1 12b513b5f8214e531054b1a3124d255a2d709a42 SHA256 d557a44d61bc5f7b285ce29d9ab787670018d052ac525f03e13e878e83dd6b06
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (Darwin)
+
+iEYEARECAAYFAk4CO+YACgkQX3X2B8XHTom4pwCgl6YBp68G5v7E+Qv8Wu9Wtx1c
+w6MAnihUPppfk9LTVFBay+NniMW22StK
+=pO7w
+-----END PGP SIGNATURE-----
